# parchment-api

./: .editorconfig  README.md
.github/workflows/: build-dev.yml  build-prod.yml
src/: Cargo.toml
src/create_post/: Cargo.toml
src/create_post/src/: main.rs
src/get_post/: Cargo.toml
src/get_post/src/: main.rs
