[package]
name = "get_post"
version = "0.1.0"
authors = ["Ethan Wright <ethan@flareline.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
lambda_runtime = "0.2.1"
rusoto_core = { version = "0.45.0", default_features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.45.0", default_features = false, features = ["rustls"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_derive = "1.0.115"
serde_json = "1.0.57"
simple_logger = "1.6.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
